@@ -491,6 +491,8 @@ AC_CONFIG_FILES(bin/mtrancid bin/mtlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nlogin bin/nrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nslogin bin/nsrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/nxrancid, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/pflogin, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/pfrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/prancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rancid_par, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/rivlogin bin/rivrancid, [chmod a+x $ac_file])
