@@ -89,6 +89,9 @@ Netscaler
 .B nxrancid
 Cisco Nexus boxes
 .TP
+.B pfrancid
+pfSense firewalls
+.TP
 .B prancid
 Procket Networks
 .TP
