@@ -6,5 +6,6 @@ rancid-git (2.3.9-0) UNRELEASED; urgency=low
   [ Jesse Norell ]
   * Added support for Telco Systems T5C (telcorancid)
   * Added support for ZyXel switches (zyrancid)
+  * Added support for pfSense (pfsense)
 
  -- Vincent Bernat <bernat@debian.org>  Mon, 18 Aug 2014 10:05:05 +0200
